--- a/gallery/css/style.css
+++ b/gallery/css/style.css
@@ -85,6 +85,7 @@
 	position:relative;
 	margin-left: 260px;
 }
+
 /*--------------------BUTTON----------------------------*/
 .button{
 	border: 2px solid #01448f;
@@ -110,35 +111,35 @@
 	top:5px;
 	right:5px;
 }
-.btnToBack>img{
-	width:45%;
-}
-.btnback path {
-	fill:black;
-}
 .btnToTop{
 	bottom: 5px;
 	right: 5px;
 	display:none;
 }
-.btnToTop>img{
-	width:80%;
+.clickAreaToTop{
+	bottom: 30px;
+	position: absolute;
+	width: 45px;
+	height: 25px;
+	opacity:0;
+	cursor:pointer;
+	z-index:3;
+	position:relative;
 }
-#btnback{
-	stroke:red;
-	 -webkit-filter: contrast(5);
-  filter: contrast(5);
-}
-#btnback{
-	stroke:red;
-}
-
 /*-----------------------ADDED CLASSES------------------*/
 .shiftToTop{
 	position:fixed;
 	top:20%;
 }
 /*------------------------------------------------------*/
+body{
+	/*-------------PATTERN from http://subtlepatterns.com ----------------------
+	
+	background-image:url('../img/bright_squares.png');
+	background-repeat:repeat;
+
+	*/
+}
 hr{
 	color:#99ddff;
 }
