--- a/_cv/css/main.css
+++ b/_cv/css/main.css
@@ -1,4 +1,88 @@
+body{
+	background-color:#fff;
+	margin:20px;
+}
+
 .main_wrapper{
 	min-width:50%;
 	min-height:350px;
+	padding:30px;
+	background-image:url("../img/background_white_paper.png");
+	background-repeat: repeat;
+}
+.main_sheet{
+	
+}
+
+.header{
+	margin-bottom:20px;
+	border-radius:2px;
+	-webkit-box-shadow: 0px 9px 56px -27px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 9px 56px -27px rgba(0,0,0,0.75);
+	box-shadow: 0px 9px 56px -27px rgba(0,0,0,0.75);
+}
+#pers_image{
+	width: 90px;
+	height: auto;
+	margin: 7px;
+}
+li{
+	list-style-type:none;
+}
+.circle{
+	position:relative;
+	display: inline-block;
+	width:30px;
+	height:30px;
+	border-radius:45px;
+	cursor:pointer;
+	background-color:#e9e9e9;
+	margin:8px;
+	
+	-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+	-moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+	
+	-webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+.circle i{
+	position:absolute;
+	left:0px;
+	top:25%;
+	height:100%;
+	width:100%;
+	text-align:center;
+	color:grey;
+	
+	-webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease
+}
+.circle:hover{
+	color:#679cb9;
+	
+	-webkit-box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.6);
+	-moz-box-shadow:1px 1px 2px 1px rgba(0,0,0,0.6);
+	box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.6);
+}
+/*--------------Content----------------------------*/
+.sub_header{
+	border-bottom:solid 2px #679cb9;
+	padding-bottom:8px;
+}
+
+.sub_header_icon{
+	position:relative;
+	width:40px;
+	height:40px;
+	border-radius:3px;
+	background-color:#679cb9;
+	float:left;
+	text-align:center;
+	font-weight:20;
+	color:#c4f0ff;
+	padding-top:5px;
+}
+.section{
+	margin: 20px 0;
 }
