--- a/_cv/css/main.css
+++ b/_cv/css/main.css
@@ -15,6 +15,7 @@ body{
 }
 
 .header{
+	padding:20px;
 	margin-bottom:20px;
 	border-radius:2px;
 	-webkit-box-shadow: 0px 9px 56px -27px rgba(0,0,0,0.75);
@@ -68,21 +69,147 @@ li{
 /*--------------Content----------------------------*/
 .sub_header{
 	border-bottom:solid 2px #679cb9;
-	padding-bottom:8px;
+	height:40px;
+}
+.sub_header p{
+	padding-left:60px;
 }
 
 .sub_header_icon{
 	position:relative;
 	width:40px;
 	height:40px;
+	bottom:0px;
 	border-radius:3px;
 	background-color:#679cb9;
 	float:left;
 	text-align:center;
 	font-weight:20;
 	color:#c4f0ff;
-	padding-top:5px;
+	line-height:250%; /*  align vertical center -- for vertical align in child */
+}
+.sub_header_icon i{
+	position:relative;
+	vertical-align:middle;
 }
 .section{
 	margin: 20px 0;
+}
+.fa-circle-o{
+	
+}
+dl > dt:before{
+	content:'\041E';
+	color:#007ba5;
+	padding:5px;
+}
+dd{
+	margin-left:35px;
+}
+/*----------------------PROGRESS BAR-------------------------------------------*/
+.progress-bar-language{
+	width:0%;
+	
+	-webkit-transition: all 1.9s ease;
+    transition: all 1.9s ease
+}
+/*---------------------BOX section---------------------------------------------*/
+.box{
+	position:relative;
+	width:110px;
+	height:110px;
+	
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box; 
+
+	background-color:#fff;
+	box-shadow: 0 0 5px #ddd;
+	margin:10px;
+	text-align:center;
+	
+	-webkit-transition: 0.4s ease;
+	-moz-transition: 0.4s ease;
+	-ms-transition: 0.4s ease;
+	-o-transition: 0.4s ease;
+	transition: 0.4s ease; 
+}
+.box > p{
+	-webkit-transition: 0.3s ease;
+	-moz-transition: 0.3s ease;
+	-ms-transition: 0.3s ease;
+	-o-transition: 0.3s ease;
+	transition: 0.3s ease; 
+}
+
+.box:hover{
+	background-color:#87c9ed;
+}
+.titleHoverOff{
+	width:100%;
+	height:100%;
+	position:absolute;
+	top:0px;
+	opacity:1;
+	padding-top:10px;
+	z-index:10;
+	
+	-webkit-transition: all .4s ease;
+	-moz-transition: all .4s ease;
+	transition: all .4s ease;
+}
+.titleHoverOff:hover{
+/*
+	animation-name: example;
+	animation-duration: 0.3s;
+	animation-timing-function:ease;
+	
+	-webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+	
+	-webkit-animation-direction: reverse; 
+    animation-direction: reverse;
+	*/
+	top:-30px;
+	opacity:0;
+}
+.titleHoverOff img{
+	width:75%;
+	height:75%;
+}
+.titleHoverIn{
+	width:100%;
+	height:100%;
+	opacity:0;
+	background-color:white;
+	vertical-align:bottom;
+	bottom:5px;
+	
+	-webkit-transform: scale3d(0.1, 0.1, 1);
+	transform: scale3d(0.1, 0.1, 1);
+	-webkit-transition: all .4s cubic-bezier(.68,-0.55,.27,1.55);
+	-moz-transition: all .4s cubic-bezier(.68,-0.55,.27,1.55);
+	transition: all .4s cubic-bezier(.68,-0.55,.27,1.55);
+}
+.titleHoverIn span{
+	position:relative;
+	top:50%;
+}
+.abc{
+	-webkit-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
+	
+	opacity:1;
+	background-color:white;
+}
+.titleHoverIn:after{
+	position:absolute;
+	content:"";
+	left:0px;right:0px;
+	bottom:20%;
+	height:1px;
+	width:50%;
+	margin: auto;
+	border-bottom:1px solid black;
+
 }
