--- a/_main/css/main.css
+++ b/_main/css/main.css
@@ -92,6 +92,7 @@ body {
 	height:30px;
 	left: 50%;
 	top: 87%;
+	
 	-ms-transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
 	transform: rotate(45deg);
@@ -136,13 +137,13 @@ body {
 	height:60px;
 }
 /*	-------Menu-----------------------------------*/
-.hideMenu{
+.changeColor{
 	width:100%;
-	height:30px;
+	height:50px;
 	position:fixed;
 	background-color:black;
 	z-index:10;
-	border-bottom:solid 1px white;
+	border-bottom:solid 1px #777;
 	
 	-webkit-transition: all 0.7s ease;
 	-moz-box-shadow:all 0.7s ease;
@@ -150,8 +151,11 @@ body {
 }
 .menuwhite{
 	background-color:white;
+	border-bottom:solid 1px #ccc;
 }
-
+.scrollclass{
+	padding-top:40px;
+}
 /*=================================================*/
 /*	Introduction-----------------------------------*/
 .introduction{
