--- a/_cv/css/main.css
+++ b/_cv/css/main.css
@@ -196,7 +196,7 @@ dd{
 	position:relative;
 	top:50%;
 }
-.abc{
+.titleScale{
 	-webkit-transform: scale3d(1, 1, 1);
 	transform: scale3d(1, 1, 1);
 	
