--- a/_main/css/main.css
+++ b/_main/css/main.css
@@ -28,6 +28,16 @@ body {
 	-webkit-transition: all 0.7s ease;
     transition: all 0.7s ease;
 }
+.icon-bar{
+	background-color:antiquewhite;
+	
+	-webkit-transition: all 0.7s ease;
+	-moz-box-shadow:all 0.7s ease;
+    transition: all 0.7s ease;
+}
+#myNavbar{
+	background-color:white;
+}
 /*
 .navbar-container:before{
 	position: absolute;
@@ -156,13 +166,206 @@ body {
 .scrollclass{
 	padding-top:40px;
 }
+.navbar-brand{
+	padding:10px 15px;
+}
+.navbar-brand img{
+	position:relative;
+	height:30px;
+	width:auto;
+	opacity:0;
+	
+	-webkit-transition: all 0.7s ease;
+	-moz-box-shadow:all 0.7s ease;
+    transition: all 0.7s ease;
+	-webkit-transition-delay: 1s;
+	-moz-transition-delay: 1s;
+    transition-delay: 1s;
+}
+/*---------------------General------------------------*/
+.row h2{
+	text-align:left;
+	padding:5px 10px;
+}
+
 /*=================================================*/
 /*	Introduction-----------------------------------*/
 .introduction{
 	width:100%;
-	height:500px;
+	height:auto;
 	position:relative;
 	background-color:#e1e1e1;
+	padding: 210px 20px;
+	padding-bottom:50px;
+	text-align:center;
+}
+.introduction img{
+	width:300px;
+	height:auto;
+	position:relative;
+}
+.introduction h2{
+	text-align:left;
+	padding:5px 10px;
+}
+.introduction h4{
+	padding-left:10px;
+}
+.border_box{
+	width:75%;
+	padding:10px 20px;
+	border-bottom:1px solid #c6c6c6;
+}
+.introduction li strong{
+	padding-right:10px;
+}
+.more_about{
+	padding:10px 5px;
+}
+.more_about i{
+	cursor:pointer;
+}
+/*=================================================*/
+
+/*=================================================*/
+/*	Skills-----------------------------------------*/
+.skills{
+	width:100%;
+	height:auto;
+	position:relative;
+	background-color:#7ed4f6;
+	padding: 10px 20px;
+	padding-bottom:30px;
+	text-align:center;
+}
+.skills img{
+	width:300px;
+	height:auto;
+	position:relative;
+}
+.skills h4{
+	padding-left:20px;
+}
+.progress_bars dd{
+	margin-left:100px;
+}
+.progress_bars dt{
+	width:50px;
+}
+/*=================================================*/
+
+/*================================================+++++=*/
+/*	experiences-----------------------------------------*/
+.experiences{
+	width:100%;
+	height:auto;
+	position:relative;
+	background-color:#e9f2ff;
+	padding: 10px 20px;
+	padding-bottom:30px;
+	text-align:center;
+}
+/*=================================================*/
+
+/*================================================+++++=*/
+/*	projects-----------------------------------------*/
+.projects{
+	width:100%;
+	height:auto;
+	position:relative;
+	background-color:#e9f2ff;
+	padding: 10px 20px;
+	padding-bottom:30px;
+	text-align:center;
+}
+/*------------BOX section--------*/
+.box{
+	position:relative;
+	width:300px;
+	height:300px;
+	
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box; 
+
+	background-color:#fff;
+	box-shadow: 0 0 5px #ddd;
+	margin:10px;
+	text-align:center;
+	
+	-webkit-transition: 0.4s ease;
+	-moz-transition: 0.4s ease;
+	-ms-transition: 0.4s ease;
+	-o-transition: 0.4s ease;
+	transition: 0.4s ease; 
+}
+.box > p{
+	-webkit-transition: 0.3s ease;
+	-moz-transition: 0.3s ease;
+	-ms-transition: 0.3s ease;
+	-o-transition: 0.3s ease;
+	transition: 0.3s ease; 
+}
+
+.box:hover{
+	background-color:#87c9ed;
+}
+.titleHoverOff{
+	width:100%;
+	height:100%;
+	position:absolute;
+	top:0px;
+	opacity:1;
+	padding-top:10px;
+	z-index:10;
+	
+	-webkit-transition: all .4s ease;
+	-moz-transition: all .4s ease;
+	transition: all .4s ease;
+}
+.titleHoverOff:hover{
+	top:-30px;
+	opacity:0;
+}
+.titleHoverOff img{
+	width:75%;
+	height:75%;
+}
+.titleHoverIn{
+	width:100%;
+	height:100%;
+	opacity:0;
+	background-color:white;
+	vertical-align:bottom;
+	bottom:5px;
+	
+	-webkit-transform: scale3d(0.1, 0.1, 1);
+	transform: scale3d(0.1, 0.1, 1);
+	-webkit-transition: all .4s cubic-bezier(.68,-0.55,.27,1.55);
+	-moz-transition: all .4s cubic-bezier(.68,-0.55,.27,1.55);
+	transition: all .4s cubic-bezier(.68,-0.55,.27,1.55);
+}
+.titleHoverIn span{
+	position:relative;
+	top:50%;
+}
+.titleScale{
+	-webkit-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
+	
+	opacity:1;
+	background-color:white;
+}
+.titleHoverIn:after{
+	position:absolute;
+	content:"";
+	left:0px;right:0px;
+	bottom:20%;
+	height:1px;
+	width:50%;
+	margin: auto;
+	border-bottom:1px solid black;
+
 }
 
 /*=================================================*/
@@ -299,8 +502,9 @@ footer{
 .footerCont i:hover{
 	color:#0cafd2;
 }
-/* RESPONSIVE CSS
--------------------------------------------------- */
+/*---------------------------------------------------- */
+/* -------------------RESPONSIVE CSS-------------------*/
+/*---------------------------------------------------- */
 
 @media (min-width: 768px) {
   /* Navbar positioning foo */
@@ -331,6 +535,20 @@ footer{
   .featurette-heading {
     font-size: 50px;
   }
+  
+  
+}
+@media (max-width: 768px) {
+
+/*------skills-------------------*/
+	.progress_bars dd{
+	margin-left:0px;
+	}
+	.progress_bars dt{
+	width:100%;
+	text-align:center;
+	}
+
 }
 
 @media (min-width: 992px) {
@@ -338,10 +556,29 @@ footer{
     margin-top: 120px;
   }
 }
+/*---------------------------@MEDIA END--------------------------------------*/
+/*---------------------------------------------------------------------------*/
 /*------------GENERAL------------------*/
 .show{
 	position:relative;
 	visibility:visible;
+	opacity:1;
+}
+.edges_vertical{
+	padding-top:5px;
+	padding-bottom:5px;
+}
+.edges_horizontal{
+	padding-left:20px;
+	padding-right:20px;
+}
+.progress-bar{
+	-webkit-transition: all 0.7s ease;
+	-moz-box-shadow:all 0.7s ease;
+    transition: all 0.7s ease;
+	-webkit-transition-delay: 1.2s;
+	-moz-transition-delay: 1.2s;
+    transition-delay: 1.2s;
 }
 /*------------Fade IN------------------*/
 .objectFadeIn{
