--- a/_main/css/main.css
+++ b/_main/css/main.css
@@ -36,7 +36,6 @@ body {
     transition: all 0.7s ease;
 }
 #myNavbar{
-	background-color:white;
 }
 /*
 .navbar-container:before{
@@ -96,6 +95,37 @@ body {
 }
 
 /**---------------------SVG-------------------**/
+.arrow_icon_footer #bg_arrow_icon{
+	fill:rgb(54, 54, 54);
+}
+.main_arrow_icon {
+	position:relative;
+	width: 43px;
+	height: 43px;
+	left: 50%;
+	top: 87%;
+}
+.arrow_icon_footer{
+	position:relative;
+	width: 43px;
+	height: 43px;
+	left:-43px;
+	opacity:0;
+	cursor:pointer;
+	
+	-webkit-box-shadow: 0px 0px 89px -24px rgba(38,38,38,1);
+	-moz-box-shadow: 0px 0px 89px -24px rgba(38,38,38,1);
+	box-shadow: 0px 0px 89px -24px rgba(38,38,38,1);
+	
+	-ms-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	transform: rotate(180deg);
+	transform-origin: right top;
+	
+	-webkit-transition: opacity 2s ease;
+	-moz-box-shadow:opacity 2s ease;
+    transition: opacity 2s ease;
+}
 #svgelem{
 	position: relative;
 	width:30px;
@@ -161,7 +191,7 @@ body {
 }
 .menuwhite{
 	background-color:white;
-	border-bottom:solid 1px #ccc;
+	border-bottom:solid 1px white;
 }
 .scrollclass{
 	padding-top:40px;
@@ -273,10 +303,14 @@ body {
 	width:100%;
 	height:auto;
 	position:relative;
-	background-color:#e9f2ff;
+	background-color:##b6e5fb;
 	padding: 10px 20px;
 	padding-bottom:30px;
 	text-align:center;
+}
+.projects .project_container{
+
+	text-align:-moz-center;
 }
 /*------------BOX section--------*/
 .box{
@@ -317,7 +351,7 @@ body {
 	top:0px;
 	opacity:1;
 	padding-top:10px;
-	z-index:10;
+	z-index:5;
 	
 	-webkit-transition: all .4s ease;
 	-moz-transition: all .4s ease;
@@ -367,6 +401,32 @@ body {
 	border-bottom:1px solid black;
 
 }
+/*================================================+++++=*/
+/*	interests-----------------------------------------*/
+.interests{
+	width:100%;
+	height:auto;
+	position:relative;
+	background-color:#e9f2ff;
+	padding: 10px 20px;
+	padding-bottom:30px;
+	text-align:center;
+}
+.gallery_container{
+	text-align:-moz-center;
+}
+.gallery_link img{
+	position:relative;
+	width:200px;
+	height:200px;
+}
+.gallery_link{
+	height: 570px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+/*=================================================*/
 
 /*=================================================*/
 /* CUSTOMIZE THE CAROUSEL
@@ -443,6 +503,7 @@ body {
 }
 .contactForm{
 	padding:20px;
+	margin-bottom:50px;
 	border: 1px solid #ddd;
 	border-radius: 5px;
 	
@@ -488,12 +549,15 @@ footer{
 }
 .footerCont li,i{
 	list-style-type:none;
-	padding:2px;
 	text-align:left;
-	margin-left:20px;
 	
 	-webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
+}
+.footerCont li{
+	padding:10px;
+	height:35px;
+	padding-left:20%;
 }
 .footerCont li:hover{
 	color:#0cafd2;
@@ -501,6 +565,10 @@ footer{
 }
 .footerCont i:hover{
 	color:#0cafd2;
+}
+#map{
+	width:200px;
+	height:100px;
 }
 /*---------------------------------------------------- */
 /* -------------------RESPONSIVE CSS-------------------*/
@@ -548,7 +616,9 @@ footer{
 	width:100%;
 	text-align:center;
 	}
-
+	#myNavbar{
+	background-color:white;
+	}
 }
 
 @media (min-width: 992px) {
