--- a/_main/css/main.css
+++ b/_main/css/main.css
@@ -1,9 +1,19 @@
+/*----------------FONTS---------------------------*/
+@font-face {
+    font-family: Cinzel;
+    src: url('../fonts/Cinzel/Cinzel-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: Cabin;
+    src: url('../fonts/Cabin/Cabin-Regular.ttf') format('truetype');
+}
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
 
 body {
-  color: #5a5a5a;
+	color: #5a5a5a;
+  	font-family:Cinzel;
 }
 
 /* CUSTOMIZE THE NAVBAR
@@ -11,11 +21,11 @@ body {
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 2;
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	z-index: 2;
 }
 .navbar-container{
 	background-color:black;
@@ -29,11 +39,15 @@ body {
     transition: all 0.7s ease;
 }
 .icon-bar{
+	position:relative;
 	background-color:antiquewhite;
 	
 	-webkit-transition: all 0.7s ease;
 	-moz-box-shadow:all 0.7s ease;
     transition: all 0.7s ease;
+}
+.icon-bar:first-child:hover{
+	background-color:red;
 }
 #myNavbar{
 }
@@ -224,7 +238,7 @@ body {
 	width:100%;
 	height:auto;
 	position:relative;
-	background-color:#e1e1e1;
+	background-color:#f5f5f5;
 	padding: 210px 20px;
 	padding-bottom:50px;
 	text-align:center;
@@ -237,6 +251,7 @@ body {
 .introduction h2{
 	text-align:left;
 	padding:5px 10px;
+	margin-bottom:50px;
 }
 .introduction h4{
 	padding-left:10px;
@@ -245,6 +260,9 @@ body {
 	width:75%;
 	padding:10px 20px;
 	border-bottom:1px solid #c6c6c6;
+}
+.myStory em{
+	font-family:Cabin;
 }
 .introduction li strong{
 	padding-right:10px;
@@ -263,7 +281,7 @@ body {
 	width:100%;
 	height:auto;
 	position:relative;
-	background-color:#7ed4f6;
+	background-color:#95E6FE;
 	padding: 25px 20px;
 	padding-bottom:30px;
 	text-align:center;
@@ -282,6 +300,17 @@ body {
 .progress_bars dt{
 	width:50px;
 }
+
+.skew_border{
+	position: relative;     
+    width: 0px;
+	height: 0px;
+    overflow: hidden;
+	border-bottom: 20px solid transparent;
+	border-left: 100vw solid rgb(149, 230, 254);
+    
+    
+}
 /*=================================================*/
 
 /*================================================+++++=*/
@@ -290,7 +319,7 @@ body {
 	width:100%;
 	height:auto;
 	position:relative;
-	background-color:#e9f2ff;
+	background-color:#fafafa;
 	padding: 25px 20px;
 	padding-bottom:30px;
 	text-align:center;
@@ -407,7 +436,7 @@ body {
 	width:100%;
 	height:auto;
 	position:relative;
-	background-color:#e9f2ff;
+	background-color:#fafafa;
 	padding: 25px 20px;
 	padding-bottom:30px;
 	text-align:center;
@@ -653,5 +682,7 @@ footer{
 
 /*------------Fade IN------------------*/
 .objectFadeIn{
+	position:relative;
 	opacity:0;
+	left:-20px;
 }
