--- a/_main/css/main.css
+++ b/_main/css/main.css
@@ -406,6 +406,9 @@ body {
 	width:75%;
 	height:75%;
 }
+.titleHoverOff p:nth-child(2){
+	padding: 40px 25px;
+}
 .titleHoverIn{
 	width:100%;
 	height:100%;
