--- a/_main/css/main.css
+++ b/_main/css/main.css
@@ -29,7 +29,7 @@ body {
 }
 .navbar-container{
 	background-color:black;
-	height:180px;
+	height:380px;
 	width:100%;
 	top:0px;
 	position:relative;
@@ -110,24 +110,32 @@ body {
 }
 
 /**---------------------SVG-------------------**/
-.arrow_icon_footer #bg_arrow_icon{
+
+.main_arrow_icon {
+	fill:black;
+	-o-fill:black;
+	
+}
+.arrow_icon_footer {
+	
 	fill:#363636;
+	-o-fill:#363636;
 }
 .main_brand_logo{
 	position: absolute;
 	text-align: center;
-	top: 40px;
+	top: 60px;
 	width:100%;
 }
 .main_brand_logo img{
-	width: 130px;
+	width: 330px;
 	height: auto;
 }
 .main_arrow_icon {
 	position:relative;
 	width: 43px;
 	height: 43px;
-	top: 85%;
+	top: 94%;
 }
 .arrow_icon_footer{
 	position:relative;
@@ -244,7 +252,7 @@ body {
 	height:auto;
 	position:relative;
 	background-color:#f5f5f5;
-	padding: 210px 20px;
+	padding: 410px 20px;
 	padding-bottom:50px;
 	text-align:center;
 }
