--- a/_main/css/main.css
+++ b/_main/css/main.css
@@ -274,6 +274,9 @@ body {
 	padding:10px 20px;
 	border-bottom:1px solid #c6c6c6;
 }
+.border_box span{
+	display:inline-block;
+}
 .myStory em{
 	font-family:Cabin;
 }
@@ -343,6 +346,9 @@ body {
 	padding: 25px 20px;
 	padding-bottom:30px;
 	text-align:center;
+}
+.experiences .role{
+	padding-top:40px;
 }
 /*=================================================*/
 
@@ -677,6 +683,11 @@ footer{
   
   
 }
+@media (max-width: 360px) {
+	.skills img{
+		width:300px;
+	}
+}
 @media (max-width: 768px) {
 
 /*------skills-------------------*/
@@ -684,14 +695,17 @@ footer{
 	margin-left:0px;
 	}
 	.progress_bars dt{
-	width:100%;
 	text-align:center;
 	}
 	#myNavbar{
 	background-color:white;
 	}
 }
-
+@media (max-width: 992px){
+	.gallery_link{
+		height:70px;
+	}
+}
 @media (min-width: 992px) {
   .featurette-heading {
     margin-top: 120px;
